<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
  <name>gz_gep_tools</name>
  <version>0.0.0</version>
  <description>TODO: Package description</description>
  <maintainer email="pdebbad@laas.fr">Pranav Debbad</maintainer>
  <license>Apache-2.0</license>

  <buildtool_depend>ament_cmake</buildtool_depend>
  <buildtool_depend>pluginlib</buildtool_depend>
  <buildtool_depend>nav_msgs</buildtool_depend>
  
  <build_depend>gz_msgs_vendor</build_depend>
  <exec_depend>gz_ros2_control</exec_depend>
  <exec_depend>ros_gz_sim</exec_depend>
  <test_depend>ament_lint_auto</test_depend>
  <test_depend>ament_lint_common</test_depend>

  <export>
    <build_type>ament_cmake</build_type>
  </export>
</package>
